<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- IMPORTANTE LOS ID DEBE COINCIDIR CON EL NAV-->

    <item
        android:id="@+id/nav_home_fragment"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/bn_home" />

<!--    <item-->
<!--        android:id="@+id/nav_zonas_riesgo_fragment"-->
<!--        android:icon="@drawable/ic_marcador_de_posicion"-->
<!--        android:title="@string/bn_zonas_de_riesgo" />-->

    <item
        android:id="@+id/nav_alertar_fragment"
        android:icon="@drawable/ic_alarma"
        android:title="@string/bn_alertar" />

    <item
        android:id="@+id/nav_mis_alertas_fragment"
        android:icon="@drawable/ic_alerta_de_telefono"
        android:title="@string/bn_mis_alertas" />


    <item
        android:id="@+id/nav_configuration_fragment"
        android:icon="@drawable/ic_config"
        android:title="@string/bn_config" />



<!--    <item-->
<!--        android:id="@+id/cerrar_session"-->
<!--        android:icon="@drawable/ic_cerrar_sesion"-->
<!--        android:title="@string/bn_cerrar_sesion" />-->
</menu>